<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="MissingPrefix">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <in.koreatech.koin.core.appbar.AppBarBase
                android:id="@+id/koin_base_app_bar_dark"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/article_scrollview"
                android:layout_alignParentTop="true"
                app:leftButtonBackground="@drawable/ic_back_arrow"
                app:rightButtonBackground="@drawable/ic_create" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/article_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="96dp"
            android:scrollbars="vertical">

            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/article_edittext_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="17.5dp"
                    android:background="@android:color/transparent"
                    android:hint="제목을 입력해주세요"
                    android:textColorHint="@color/white_alpha87"
                    android:textSize="16sp"
                    app:fontName="Normal" />

                <LinearLayout
                    android:id="@+id/title_nickname_border"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="0.5dp"
                    android:layout_marginTop="17.5dp"
                    android:layout_marginEnd="0.5dp"
                    android:background="@color/divider"
                    android:orientation="horizontal" />

                <EditText
                    android:id="@+id/article_edittext_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="17.5dp"
                    android:background="@android:color/transparent"
                    android:hint="닉네임을 입력해주세요"
                    android:maxLines="1"
                    android:textColorHint="@color/white_alpha87"
                    android:textSize="16sp"
                    app:fontName="Normal"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toTopOf="@id/nickname_password_border"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_nickname_border"
                    app:layout_constraintVertical_chainStyle="spread_inside" />

                <LinearLayout
                    android:id="@+id/nickname_password_border"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="0.5dp"
                    android:layout_marginTop="17.5dp"
                    android:layout_marginEnd="0.5dp"
                    android:background="@color/divider"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/article_edittext_nickname" />

                <EditText
                    android:id="@+id/article_edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="17.5dp"
                    android:background="@android:color/transparent"
                    android:hint="비밀번호를 입력해주세요"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@color/white_alpha87"
                    android:textSize="16sp"
                    app:fontName="Normal"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toTopOf="@id/password_content_border"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nickname_password_border" />

                <LinearLayout
                    android:id="@+id/password_content_border"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="0.5dp"
                    android:layout_marginTop="17.5dp"
                    android:layout_marginEnd="0.5dp"
                    android:background="@color/divider"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/article_edittext_password" />


                <in.koreatech.koin.ui.board.KoinRichEditor
                    android:id="@+id/article_editor_content"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    app:auto_focus="false"
                    app:placeholder="내용을 입력해주세요.."
                    app:render_type="Editor" />


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


        <HorizontalScrollView
            android:id="@+id/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="56dp"
            android:background="#e6e6e6"
            android:scrollbars="none">

            <include layout="@layout/editor_toolbar_linearlayout_horizontal" />

        </HorizontalScrollView>
    </RelativeLayout>

</FrameLayout>