...
    <string name="navigation_item_dining">식단</string>
    <string name="navigation_item_land">복덕방</string>
    <!--<string name="navigation_item_faq">FAQ</string>-->

    <!--커뮤니티-->
    <string name="navigation_item_free_board">자유게시판</string>
    <string name="navigation_item_anonymous_board">익명게시판</string>
    <string name="navigation_item_recruit_board">취업게시판</string>

    <!--부가서비스-->
    <string name="navigation_item_callvan_sharing">콜밴쉐어링</string>
    <string name="navigation_item_real_estate">복덕방</string>
    <string name="navigation_item_usedmarket">중고장터</string>
...
    <string name="navigation_item_version_info">버전 정보</string>
    <string name="navigation_item_open_source">오픈소스</string>
    <string name="navigation_item_login">로그인</string>
    <string name="navigation_item_logout">로그아웃</string>
    <string name="navigation_cancel">취소</string>
    <string name="login_request">로그인이 필요한 서비스입니다.\n로그인 하시겠습니까?</string>
    <string name="navigation_ok">확인</string>
    <string name="user_only">회원 전용 서비스</string>
    <string name="to_be_opened">서비스예정입니다</string>
    <string name="press_again_to_exit">뒤로가기 버튼을 한 번 더 누르면 종료됩니다.</string>
    <string name="user_anon">익명</string>

    <!-- Server Messages -->
...
    <string name="koreatech_email_url">https://email.koreatech.ac.kr/</string>

    <!-- Required value in actionbardrawertoggle -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signup_to_login">이미 계정이 있으신가요? <b> 로그인하기 </b> </string>
    <string name="back_button_pressed">정말 저장하지 않고 나가시겠어요?</string>
    <string name="erase_button_pressed">정말 전체를 지우겠어요?</string>

    <!-- Board -->
    <string name="board_number">글번호</string>
    <string name="board_view_count">조회</string>
    <string name="board_comment_count">댓글수</string>
    <string name="board_author">작성자</string>
    <string name="board_create">작성</string>
    <string name="board_edit">수정</string>

    <!-- Comment -->
    <string name="comment_edit">수정</string>
    <string name="comment_remove">삭제</string>
    <string name="comment_reply">댓글</string>

    <!--Bus-->
    <string name="bus_search_button">조회</string>
    <string name="bus_spinner_select_error">출발지와 도착지는 달라야합니다.</string>
    <string name="daesung_depature_place_university_to_yawoori">안동출발버스</string>
...
