...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/base_appbar_dark_left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="14sp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="제목" />

    <TextView
        android:id="@+id/base_appbar_dark_right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
...
